Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-137848

Assertion failure in tst_qquickpixmapcache::lockingCrash

XMLWordPrintable

    • c1924afcd (dev), fe1f9b2c9 (dev)

      https://codereview.qt-project.org/c/qt/qtdeclarative/+/651871/10#message-e99598b5dcd91f97464c43565d2bcc68edb535ae

      https://testresults.qt.io/logs/qt/qtdeclarative/dad6b1ef65cbfc71e42f9c55bc7ad1cc82403dc0/MacOSMacOS_15arm64MacOSMacOS_15arm64Clangqtci-macos-15-arm-104-b19a34TestOnly/ec287900e831dcc4344ec39b796b77f4c1f2af75/test_1750157940/log.txt.gz

      agent:2025/06/17 09:14:34 build.go:412: PASS   : tst_qquickpixmapcache::networkCrash()
      agent:2025/06/17 09:14:34 build.go:412: QFATAL : tst_qquickpixmapcache::lockingCrash() ASSERT: "isCurrentJsEngineThread()" in file /Users/qt/work/qt/qtdeclarative/src/qml/qml/qqmltypeloaderdata_p.h, line 176
      agent:2025/06/17 09:14:34 build.go:412: FAIL!  : tst_qquickpixmapcache::lockingCrash() Received a fatal error.
      agent:2025/06/17 09:14:34 build.go:412:    Loc: [/Users/qt/work/qt/qtdeclarative/src/qml/qml/qqmltypeloaderdata_p.h(176)]
      agent:2025/06/17 09:14:34 build.go:412: Totals: 14 passed, 1 failed, 0 skipped, 0 blacklisted, 821ms
      agent:2025/06/17 09:14:34 build.go:412: ********* Finished testing of tst_qquickpixmapcache *********
      agent:2025/06/17 09:14:34 build.go:412: Received signal 6 (SIGABRT)
      agent:2025/06/17 09:14:34 build.go:412:          lockingCrash function time: 7ms, total time: 821ms
      agent:2025/06/17 09:14:34 build.go:412: *** Signal 6: Backtracing from 0x192b5e600... done ***
      agent:2025/06/17 09:14:34 build.go:412: *** Program crashed: Aborted at 0x0000000192b5e600 ***
      agent:2025/06/17 09:14:34 build.go:412: Thread 14 "QQuickPixmapReader" crashed:
      agent:2025/06/17 09:14:34 build.go:412:  0      0x0000000192b5e600 __pthread_kill + 8 in libsystem_kernel.dylib
      agent:2025/06/17 09:14:34 build.go:412:  1 [ra] 0x000000010f0c8478 qAbort() + 12 in QtCore
      agent:2025/06/17 09:14:34 build.go:412:  2 [ra] 0x000000010f1159d8 void qt_maybe_message_fatal<QString&>(QtMsgType, QMessageLogContext const&, QString&) + 56 in QtCore
      agent:2025/06/17 09:14:34 build.go:412:  3 [ra] 0x000000010f10f24c qt_message(QtMsgType, QMessageLogContext const&, char const*, char*) + 124 in QtCore
      agent:2025/06/17 09:14:34 build.go:412:  4 [ra] 0x000000010f8f7748 QMessageLogger::fatal(char const*, ...) const + 288 in QtCore
      agent:2025/06/17 09:14:34 build.go:412:  5 [ra] 0x000000010f8f6784 qt_assert(char const*, char const*, int) + 112 in QtCore
      agent:2025/06/17 09:14:34 build.go:412:  6 [ra] 0x0000000109d13638 QQmlTypeLoaderLockedData::engine() const + 64 in QtQml
      agent:2025/06/17 09:14:34 build.go:412:  7 [ra] 0x0000000109d0f3c0 QQmlTypeLoader::engine() const + 24 in QtQml
      agent:2025/06/17 09:14:34 build.go:412:  8 [ra] 0x0000000109d1915c QQmlTypeLoader::~QQmlTypeLoader() + 32 in QtQml
      agent:2025/06/17 09:14:34 build.go:412:  9 [ra] 0x0000000109d19390 QQmlTypeLoader::~QQmlTypeLoader() + 28 in QtQml
      agent:2025/06/17 09:14:34 build.go:412: 10 [ra] 0x00000001067968dc std::__1::default_delete<QQmlTypeLoader>::operator()[abi:sn180100](QQmlTypeLoader*) const + 52 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 11 [ra] 0x00000001067967e0 std::__1::unique_ptr<QQmlTypeLoader, std::__1::default_delete<QQmlTypeLoader>>::reset[abi:sn180100](QQmlTypeLoader*) + 112 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 12 [ra] 0x000000010679656c std::__1::unique_ptr<QQmlTypeLoader, std::__1::default_delete<QQmlTypeLoader>>::operator=[abi:sn180100](std::__1::unique_ptr<QQmlTypeLoader, std::__1::default_delete<QQmlTypeLoader>>&&) + 48 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 13 [ra] 0x0000000106796470 QQmlTypeLoader* QV4::ExecutionEngine::typeLoader<QQmlTypeLoader>() + 96 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 14 [ra] 0x0000000106786ca0 QQmlTypeLoader* QQmlTypeLoader::get<QQmlEngine, QQmlEnginePrivate, void>(QQmlEngine*) + 28 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 15 [ra] 0x0000000106786c30 QQuickPixmapReader::networkAccessManager() + 108 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 16 [ra] 0x000000010678b45c QQuickPixmapReader::processJob(QQuickPixmapReply*, QUrl const&, QString const&, QQmlImageProviderBase::ImageType, QSharedPointer<QQuickImageProvider> const&) + 5668 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 17 [ra] 0x0000000106789670 QQuickPixmapReader::processJobs() + 1340 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 18 [ra] 0x000000010678c6f4 QQuickPixmapReader::run() + 480 in QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 19 [ra] 0x000000010f60ccb0 QThreadPrivate::start(void*)::$_1::operator()() const + 780 in QtCore
      agent:2025/06/17 09:14:34 build.go:412: 20 [ra] 0x000000010f60a7d4 void (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::$_1>(QThreadPrivate::start(void*)::$_1&&) + 24 in QtCore
      agent:2025/06/17 09:14:34 build.go:412: 21 [ra] 0x000000010f60a758 QThreadPrivate::start(void*) + 224 in QtCore
      agent:2025/06/17 09:14:34 build.go:412: 22 [ra] 0x0000000192b972e4 _pthread_start + 136 in libsystem_pthread.dylib
      agent:2025/06/17 09:14:34 build.go:412: Registers:
      agent:2025/06/17 09:14:34 build.go:412:  x0 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412:  x1 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412:  x2 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412:  x3 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412:  x4 0x00006000021d2e40  6f 72 53 63 72 65 65 6e 43 6f 6f 72 64 69 6e 61  orScreenCoordina
      agent:2025/06/17 09:14:34 build.go:412:  x5 0x0000000000000020  32
      agent:2025/06/17 09:14:34 build.go:412:  x6 0x0000000000001000  4096
      agent:2025/06/17 09:14:34 build.go:412:  x7 0x0000000000000030  48
      agent:2025/06/17 09:14:34 build.go:412:  x8 0x3f0df05bc273f2a4  4543551875981767332
      agent:2025/06/17 09:14:34 build.go:412:  x9 0x3f0df05aa98a82a4  4543551871268848292
      agent:2025/06/17 09:14:34 build.go:412: x10 0x000000010f115aa8  6c 00 00 00 48 00 00 00 24 00 00 00 10 00 00 00  l···H···$·······
      agent:2025/06/17 09:14:34 build.go:412: x11 0x0000000000000003  3
      agent:2025/06/17 09:14:34 build.go:412: x12 0x00000000000007fb  2043
      agent:2025/06/17 09:14:34 build.go:412: x13 0x00000000000007fd  2045
      agent:2025/06/17 09:14:34 build.go:412: x14 0x00000000164050ac  373313708
      agent:2025/06/17 09:14:34 build.go:412: x15 0x00000000162048c1  371214529
      agent:2025/06/17 09:14:34 build.go:412: x16 0x0000000000000148  328
      agent:2025/06/17 09:14:34 build.go:412: x17 0x00000001ff4ac0e8  f8 e5 b5 92 01 00 00 00 a4 37 b6 92 01 00 00 00  øåµ·····¤7¶·····
      agent:2025/06/17 09:14:34 build.go:412: x18 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412: x19 0x0000000000000006  6
      agent:2025/06/17 09:14:34 build.go:412: x20 0x000000000000b207  45575
      agent:2025/06/17 09:14:34 build.go:412: x21 0x000000016bf970e0  00 70 f9 6b 01 00 00 00 ac 70 f9 6b 01 00 00 00  ·pùk····¬pùk····
      agent:2025/06/17 09:14:34 build.go:412: x22 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412: x23 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412: x24 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412: x25 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412: x26 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412: x27 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412: x28 0x0000000000000000  0
      agent:2025/06/17 09:14:34 build.go:412:  fp 0x000000016bf95a70  b0 5a f9 6b 01 00 00 00 08 39 aa 92 01 00 00 00  °Zùk·····9ª·····
      agent:2025/06/17 09:14:34 build.go:412:  lr 0x0000000192b96f70  1f 04 00 31 41 03 00 54 a8 06 40 f9 00 01 40 b9  ···1A··T¨·@ù··@¹
      agent:2025/06/17 09:14:34 build.go:412:  sp 0x000000016bf95a50  00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  ················
      agent:2025/06/17 09:14:34 build.go:412:  pc 0x0000000192b5e600  03 01 00 54 7f 23 03 d5 fd 7b bf a9 fd 03 00 91  ···T·#·Õý{¿©ý···
      agent:2025/06/17 09:14:34 build.go:412: Images (542 omitted):
      agent:2025/06/17 09:14:34 build.go:412: 0x0000000106280000–0x0000000106c88000 be14c1f897a93847aa814d53113d6008 QtQuick                 /Users/qt/work/install/lib/QtQuick.framework/Versions/A/QtQuick
      agent:2025/06/17 09:14:34 build.go:412: 0x00000001095c4000–0x000000010a024000 4f8f38c4a7a9310f85f5a22bb6ad232d QtQml                   /Users/qt/work/install/lib/QtQml.framework/Versions/A/QtQml
      agent:2025/06/17 09:14:34 build.go:412: 0x000000010f0a8000–0x000000010fa94000 665f5b05dbf630bd81bf59ee5617e37b QtCore                  /Users/qt/work/install/lib/QtCore.framework/Versions/A/QtCore
      agent:2025/06/17 09:14:34 build.go:412: 0x0000000192b55000–0x0000000192b8fff8 9a72fd37d8273d6db6f4422621e36c94 libsystem_kernel.dylib  /usr/lib/system/libsystem_kernel.dylib
      agent:2025/06/17 09:14:34 build.go:412: 0x0000000192b90000–0x0000000192b9d000 d09f4078adad3dd0b17bce0142887b28 libsystem_pthread.dylib /usr/lib/system/libsystem_pthread.dylib
      agent:2025/06/17 09:14:34 build.go:412: Backtrace took 0.56s
      agent:2025/06/17 09:14:34 build.go:412: qt-testrunner.py     INFO: Test process exited with code: -6
      agent:2025/06/17 09:14:34 build.go:412: qt-testrunner.py     INFO: Parsed XML file /Users/qt/work/testresults/tst_qquickpixmapcache-1750151672037.xml in 0.000 seconds
      agent:2025/06/17 09:14:34 build.go:412: qt-testrunner.py     INFO: Found 14 passes and 1 failures
      agent:2025/06/17 09:14:34 build.go:412: qt-testrunner.py  WARNING: CRASH detected, re-running the whole executable
      agent:2025/06/17 09:14:34 build.go:412: qt-testrunner.py     INFO: Will re-run the full test executable
      agent:2025/06/17 09:14:34 build.go:412: qt-testrunner.py    DEBUG: Running test command line: ['/Users/qt/work/qt/qtdeclarative_standalone_tests/tests/auto/quick/qquickpixmapcache/tst_qquickpixmapcache', '-o', '/Users/qt/work/testresults/tst_qquickpixmapcache-1750151673507.xml,xml', '-o', '/Users/qt/work/testresults/tst_qquickpixmapcache-1750151673507.junit.xml,junitxml', '-o', '/Users/qt/work/testresults/tst_qquickpixmapcache-1750151673507.txt,txt', '-o', '-,txt']
      

        For Gerrit Dashboard: QTBUG-137848
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes