QQuickPixmapReader: Trigger typeloader creation before thread start

The type loader can be requested from different threads but should be
created on the engine thread.

Amends commit d2bc4a4330254c0c68a0ade51b59a71c4b67b470

Fixes: QTBUG-137848
Change-Id: I30d93e6351bd67ded94956f9832cb87157823373
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>